--- a/rwb/index.html
+++ b/rwb/index.html
@@ -134,6 +134,8 @@
                                 <li><span>레이아웃 그리드시스템:예시</span><a href="https://960.gs/">그리드시스템 예시::grid</a></li>
                                 <li><span>이미지 url:소스변환</span><a href="https://ko.imgbb.com/">이미지 url</a></li>
                                 <li><span>이미지비율:</span><a href="https://andrew.hedges.name/experiments/aspect_ratio/">자동비율</a></li>
+                                <li><span>실시간뉴스:</span><a href="https://newsapi.org/">실시간 뉴스</a></li>
+
                             </ul>
                     </div>
                     <div class="sitelist_box">
