--- a/rwb/classHyo/test1/index.html
+++ b/rwb/classHyo/test1/index.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=PT+Sans&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="./css/style.css">
-    <title>끝자락 그리고 ___ ::테마 기획전시회</title>
+    <title>끝자락 그리고 ::테마 기획전시회</title>
 </head>
 
 <body>
@@ -42,7 +42,7 @@
         <div class="contentWrap">
             <div class="contHome" id="contHome">
                 <div class="contHomeBox">
-                    <h1>끝자락 그리고 ___ </h1>
+                    <h1>끝자락 그리고</h1>
                     <p>죽을 대하는 그들의 자세:<br> 테마 기획 온라인전시회 2022</p>
                     <img src="https://i.ibb.co/5jq3rsJ/test1-3.jpg" alt="『죽음의 성』, 아놀드 뵈클린">
                     <button>Downoad</button>
@@ -330,9 +330,39 @@
             </div>
 
             <div class="contEvent">
+                <h3>Event</h3>
+                
+                <div class="EventBox">
+                    <div class="EventBoxChi">
+                        <div><p>&sharp;끝자락그리고_추첨이벤트</p></div>
+                        <div><p>&#10077; 끝자락 그리고 (    ) &#10078;
+                            <br>(    )괄호를 넣어주세요</p></div>
+                        <div>
+                            <p>입장권번호 입력시 응모가능</p>
+                            <p>추첨을 통해 50분에게 선물을 드립니다. </p>
+                            <button> 응모하기 </button>
+                        </div>
+                    </div>
+                    <div class="EventBoxChi">
+                        <div><p>&sharp;끝자락그리고_기념카드</p></div>
+                        <div><p>&#10077; 관람 기념카드 &#10078;</p></div>
+                        <div>
+                            <p>입장권번호 입력시 이메일로 보내드립니다.</p>
+                            <button> 카드발급받기 </button>
+                        </div>                        
+                    </div>
+                </div>
 
             </div>
-  
+            <footer>
+                <div>
+                    <a href="#"><img src="https://i.ibb.co/y0yVb73/talkchannel.png" alt="카카오톡채널"/></a>
+                    <a href="#"><img src="https://i.ibb.co/1sZ3JgK/image.jpg" alt="인스타그램"/></a>
+                </div>
+                <div>
+                    <p>Copyright 2022. hye All rights reserved</p>
+                </div>
+            </footer>
 
             <div class="menu" id="menu">
                 <div class="menu_icon">
@@ -355,16 +385,9 @@
                         </ul>
                     </div>
                 </div>
+
             </div>
-            <footer>
-                <div>
-                    <a href="#"><img src="https://i.ibb.co/y0yVb73/talkchannel.png" alt="카카오톡채널"/></a>
-                    <a href="#"><img src="https://i.ibb.co/1sZ3JgK/image.jpg" alt="인스타그램"/></a>
-                </div>
-                <div>
-                    <p>Copyright 2022. hye All rights reserved</p>
-                </div>
-            </footer>
+
 
         </div>
 
