--- a/rwb/classHyo/test1/index.html
+++ b/rwb/classHyo/test1/index.html
@@ -377,11 +377,11 @@
                     </div>
                     <div class="menu_listCh">
                         <ul>
-                            <a href="#contHome"><li>Home</li></a>
-                            <a href="#conAbout"><li>About</li></a>
-                            <a href="#contArtist"><li>About the artist</li></a>
-                            <a href="#contArt"><li>Art gallery</li></a>
-                            <a href="#contEvent"><li>Event</li></a>                          
+                            <li><a href="#contHome">Home</a></li>
+                            <li><a href="#conAbout">About</a></li>
+                            <li><a href="#contArtist">About the artist</a></li>
+                            <li><a href="#contArt">Art gallery</a></li>
+                            <li><a href="#contEvent">Event</a></li>                       
                         </ul>
                     </div>
                 </div>
