--- a/rwb/classHyo/test1/index.html
+++ b/rwb/classHyo/test1/index.html
@@ -366,9 +366,12 @@
 
             <div class="menu" id="menu">
                 <div class="menu_icon">
-                    <span></span>
-                    <span></span>
-                    <span></span>
+                    <div>
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                    </div>
+
                 </div>
                 <div class="menu_list">
                     <div class="menu_list_icon">
