--- a/rwb/classHyo/test1/index.html
+++ b/rwb/classHyo/test1/index.html
@@ -128,7 +128,7 @@
                                 <p>구매방법</p>
                                 <hr>
                                 <p> &#10112; 현장 방문구매 (현장 관람장소와 동일)</p>
-                                <p> &#10113; 온라인 방문구매 <button> 티켓 구매 하기</button></p>
+                                <p> &#10113; 온라인 구매 <button> 티켓 구매 하기</button></p>
                             </div>
                         </div>
                         <div>
