--- a/rwb/classHyo/test1/index.html
+++ b/rwb/classHyo/test1/index.html
@@ -402,7 +402,7 @@
                             <p>&sharp;끝자락그리고_기념카드</p>
                         </div>
                         <div class="Event_popup2Select">
-                            <div class="Event_popup2Select1">
+                            <div>
                                 <select name="codeImgSelect" class="imgSel">
                                     <option disabled selected>『명화(택)』</option>
                                     <option value="img1">『죽음의섬』</option>
@@ -416,7 +416,7 @@
                                 </select>
                                 <button id="imgSel_Bt"> 이미지 보기 </button>
                             </div>
-                            <div class="Event_popup2Select2">
+                            <div>
                                 <select name="codefilterSelect" class="filterSel">
                                     <option disabled selected> 필터 선택</option>
                                     <option value="filter1">없음</option>
@@ -426,7 +426,7 @@
                                 </select>
                                 <button id="sizeSel_Bt"> 필터 보기 </button>
                             </div>
-                            <div class="Event_popup3Select2">
+                            <div>
                                 <select name="codeSizeSelect" class="sizeSel">
                                     <option disabled selected> 기종 택(카드발급사이즈)</option>
                                     <option value="size1">iphone SE</option>
