--- a/rwb/index.html
+++ b/rwb/index.html
@@ -104,7 +104,16 @@
             </a>
             <a href="./studySelf/js/array.html">
                 <h3>studySelf: arry 정리목록 바로가기</h3>
-            </a>                  
+            </a>             
+            <a href="http://hye0.woobi.co.kr">
+                <h3>우비 바로가기</h3>
+            </a>   
+            <a href="http://hye0.woobi.co.kr/_db/_handler.php">
+                <h3>우비 db 바로가기</h3>
+            </a>  
+            <a href="https://ppangsooni.github.io/">
+                <h3>깃허그 바로가기</h3>
+            </a>         
                     <div class="sitelist_box">
                         <p>temporary :</p>
                             <ul>
