--- a/rwb/classHyo/test1/index.html
+++ b/rwb/classHyo/test1/index.html
@@ -529,7 +529,7 @@
                         <span></span>
                         <span></span>
                     </div>
-                    <div class="7">
+                    <div class="menu_listCh">
                         <ul>
                             <li><a href="#contHome">Home</a></li>
                             <li><a href="#conAbout">About</a></li>
