--- a/rwb/classHyo/test1/index.html
+++ b/rwb/classHyo/test1/index.html
@@ -532,7 +532,7 @@
                     <div class="menu_listCh">
                         <ul>
                             <li><a href="#contHome">Home</a></li>
-                            <li><a href="#conAbout">About</a></li>
+                            <li><a href="#contAbout">About</a></li>
                             <li><a href="#contArtist">About the artist</a></li>
                             <li><a href="#contArt">Art gallery</a></li>
                             <li><a href="#contEvent">Event</a></li>                       
