--- a/rwb/classHyo/test1/index.html
+++ b/rwb/classHyo/test1/index.html
@@ -36,7 +36,7 @@
     <div class="wrap">
         <div class="sidebanner">
             <div>
-                <img src="https://i.ibb.co/5jq3rsJ/test1-3.jpg" alt="『죽음의 성』, 아놀드 뵈클린">
+                <img src="https://i.ibb.co/RS1gKh2/image.jpg" alt="『죽음의 춤』, 미상">
             </div>
         </div>
         <div class="contentWrap">
