--- a/rwb/classHyo/test1/index.html
+++ b/rwb/classHyo/test1/index.html
@@ -17,15 +17,15 @@
     <div class="cursor"></div>
     <div class="smokyWrap" id="smokyWrap">
         <p>
-            <span>항</span><span>상 &nbsp</span>
-            <span>죽</span><span>을 &nbsp</span>
+            <span>항</span><span>상 &nbsp </span>
+            <span>죽</span><span>을 &nbsp </span>
             <span>각</span><span>오</span><span>를 &nbsp</span>
         </p>
         <p>
             <span>하</span><span>고 &nbsp</span><span>있</span><span>는 &nbsp</span><span>사</span><span>람</span><span>만</span><span>이, &nbsp</span>
         </p>
         <p>
-            <span>참</span><span>으</span><span>로 &nbsp</span><span>자</span><span>유</span><span>로</span><span>운 </span>
+            <span>참</span><span>으</span><span>로 &nbsp </span><span>자</span><span>유</span><span>로</span><span>운 </span>
             <span>인</span><span>간</span><span>이</span><span>다.</span>
         </p>
         <p>
@@ -66,7 +66,7 @@
                     </div>
                         <!-- 임의로 전시회링크  -->
                     <div class="youtubeIframeBox">
-                        <iframe width="510" height="315" src="https://www.youtube.com/embed/Ew1EO2YNcBY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        <iframe width="510" height="315" src="https://www.youtube.com/embed/Ew1EO2YNcBY" title="YouTube video player"  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     </div>
                     
 
