--- a/rwb/classHyo/test1/index.html
+++ b/rwb/classHyo/test1/index.html
@@ -407,7 +407,7 @@
                                 <!-- <span>기념카드 디자인</span> -->
                                 <div>
                                     <select name="codeImgSelect" class="imgSel" required>
-                                        <option disabled selected>『명화』선택</option>
+                                        <option disabled selected>명화</option>
                                         <option value="img1">『죽음의섬』</option>
                                         <option value="img2">『윌렘 반 데어...』</option>
                                         <option value="img3">『의사』</option>
@@ -421,7 +421,7 @@
                                 </div>
                                 <div>
                                     <select name="codeFilterSelect" class="filterSel" required>
-                                        <option disabled selected>필터 선택</option>
+                                        <option disabled selected>필터</option>
                                         <option value="filterNone">없음</option>
                                         <option value="filter1">blur</option>
                                         <option value="filter2">grayscale</option>
@@ -431,7 +431,7 @@
                                 </div>
                                 <div>
                                     <select name="codeDesignSelect" class="designSel" required>
-                                        <option disabled selected >디자인 선택</option>
+                                        <option disabled selected >디자인</option>
                                         <option value="design1">1</option>
                                         <option value="design2">2</option>
                                         <option value="design3">3</option>
@@ -442,8 +442,8 @@
                                     <button id="designSel_Bt" type="button"> 디자인 보기 </button>
                                 </div>
                                 <div>
-                                    <select name="codeFrameSelect" class="FrameSel" required>
-                                        <option disabled selected >프레임 선택</option>
+                                    <select name="codeFrameSelect" class="frameSel" required>
+                                        <option disabled selected >프레임</option>
                                         <option value="FrameNone">없음</option>
                                         <option value="FrameColor">color</option>
                                         <option value="Frame1">Frame 1</option>
@@ -452,11 +452,11 @@
                                         <option value="Frame4">Frame 4</option>
                                     </select>
                                     <input type="color" value="#ff0000">
-                                    <button id="designSel_Bt" type="button"> 프레임 보기 </button>
+                                    <button id="frameSel_Bt" type="button"> 프레임 보기 </button>
                                 </div>
                                 <div>
                                     <select name="codeSizeSelect" class="sizeSel" required>
-                                        <option disabled selected> 기종(사이즈) 선택</option>
+                                        <option disabled selected>기종</option>
                                         <option value="size1">iphone SE</option>
                                         <option value="size2">iphone XR</option>
                                         <option value="size3">iphone  12 Pro</option>
