--- a/rwb/classHyo/test1/index.html
+++ b/rwb/classHyo/test1/index.html
@@ -17,15 +17,15 @@
     <div class="cursor"></div>
     <div class="smokyWrap" id="smokyWrap">
         <p>
-            <span>항</span><span>상 &nbsp </span>
-            <span>죽</span><span>을 &nbsp </span>
-            <span>각</span><span>오</span><span>를 &nbsp</span>
+            <span>항</span><span>상 &nbsp; </span>
+            <span>죽</span><span>을 &nbsp; </span>
+            <span>각</span><span>오</span><span>를 &nbsp;</span>
         </p>
         <p>
-            <span>하</span><span>고 &nbsp</span><span>있</span><span>는 &nbsp</span><span>사</span><span>람</span><span>만</span><span>이, &nbsp</span>
+            <span>하</span><span>고 &nbsp;</span><span>있</span><span>는 &nbsp;</span><span>사</span><span>람</span><span>만</span><span>이, &nbsp</span>
         </p>
         <p>
-            <span>참</span><span>으</span><span>로 &nbsp </span><span>자</span><span>유</span><span>로</span><span>운 </span>
+            <span>참</span><span>으</span><span>로 &nbsp; </span><span>자</span><span>유</span><span>로</span><span>운 </span>
             <span>인</span><span>간</span><span>이</span><span>다.</span>
         </p>
         <p>
@@ -407,7 +407,7 @@
                                 <!-- <span>기념카드 디자인</span> -->
                                 <div>
                                     <select name="codeImgSelect" class="imgSel" required>
-                                        <option disabled selected>명화 선택하기</option>
+                                        <option selected>명화 선택하기</option>
                                         <option value="img1">『죽음의섬』</option>
                                         <option value="img2">『윌렘 반 데어...』</option>
                                         <option value="img3">『의사』</option>
