--- a/rwb/classHyo/test1/index.html
+++ b/rwb/classHyo/test1/index.html
@@ -406,7 +406,7 @@
                             <div class="Event_popup2Select">
                                 <!-- <span>기념카드 디자인</span> -->
                                 <div>
-                                    <select name="codeImgSelect" class="imgSel" required>
+                                    <select name="codeImgSelect" class="imgSel" required multiple size="2">
                                         <option selected>명화 선택하기</option>
                                         <option value="img1">『죽음의섬』</option>
                                         <option value="img2">『윌렘 반 데어...』</option>
