--- a/rwb/classHyo/test1/index.html
+++ b/rwb/classHyo/test1/index.html
@@ -22,7 +22,7 @@
             <span>각</span><span>오</span><span>를 &nbsp;</span>
         </p>
         <p>
-            <span>하</span><span>고 &nbsp;</span><span>있</span><span>는 &nbsp;</span><span>사</span><span>람</span><span>만</span><span>이, &nbsp</span>
+            <span>하</span><span>고 &nbsp;</span><span>있</span><span>는 &nbsp;</span><span>사</span><span>람</span><span>만</span><span>이, &nbsp;</span>
         </p>
         <p>
             <span>참</span><span>으</span><span>로 &nbsp; </span><span>자</span><span>유</span><span>로</span><span>운 </span>
