--- a/rwb/classHyo/test1/index.html
+++ b/rwb/classHyo/test1/index.html
@@ -406,8 +406,8 @@
                             <div class="Event_popup2Select">
                                 <!-- <span>기념카드 디자인</span> -->
                                 <div>
-                                    <select name="codeImgSelect" class="imgSel" required multiple size="2">
-                                        <option selected>명화 선택하기</option>
+                                    <select name="codeImgSelect" class="imgSel" required>
+                                        <option value="0">명화 선택하기</option>
                                         <option value="img1">『죽음의섬』</option>
                                         <option value="img2">『윌렘 반 데어...』</option>
                                         <option value="img3">『의사』</option>
@@ -421,7 +421,7 @@
                                 </div>
                                 <div>
                                     <select name="codeFilterSelect" class="filterSel" required>
-                                        <option disabled selected>필터 선택하기</option>
+                                        <option value="0">필터 선택하기</option>
                                         <option value="filterNone">없음</option>
                                         <option value="filter1">blur</option>
                                         <option value="filter2">grayscale</option>
