--- a/rwb/classHyo/test1/index.html
+++ b/rwb/classHyo/test1/index.html
@@ -407,7 +407,7 @@
                                 <!-- <span>기념카드 디자인</span> -->
                                 <div>
                                     <select name="codeImgSelect" class="imgSel" required>
-                                        <option value="0">명화 선택하기</option>
+                                        <option value="">명화 선택하기</option>
                                         <option value="img1">『죽음의섬』</option>
                                         <option value="img2">『윌렘 반 데어...』</option>
                                         <option value="img3">『의사』</option>
@@ -421,7 +421,7 @@
                                 </div>
                                 <div>
                                     <select name="codeFilterSelect" class="filterSel" required>
-                                        <option value="0">필터 선택하기</option>
+                                        <option value="">필터 선택하기</option>
                                         <option value="filterNone">없음</option>
                                         <option value="filter1">blur</option>
                                         <option value="filter2">grayscale</option>
@@ -431,7 +431,7 @@
                                 </div>
                                 <div>
                                     <select name="codeDesignSelect" class="designSel" required>
-                                        <option disabled selected >디자인 선택하기</option>
+                                        <option value="">디자인 선택하기</option>
                                         <option value="design1">1</option>
                                         <option value="design2">2</option>
                                         <option value="design3">3</option>
@@ -443,7 +443,7 @@
                                 </div>
                                 <div>
                                     <select name="codeFrameSelect" class="frameSel" required>
-                                        <option disabled selected >프레임 선택하기</option>
+                                        <option value="">프레임 선택하기</option>
                                         <option value="FrameNone">없음</option>
                                         <option value="FrameColor">color</option>
                                         <option value="Frame1">Frame 1</option>
@@ -456,7 +456,7 @@
                                 </div>
                                 <div>
                                     <select name="codeSizeSelect" class="sizeSel" required>
-                                        <option disabled selected>기종(사이즈) 선택하기</option>
+                                        <option value="">기종(사이즈) 선택하기</option>
                                         <option value="size1">iphone SE</option>
                                         <option value="size2">iphone XR</option>
                                         <option value="size3">iphone  12 Pro</option>
@@ -551,5 +551,5 @@
   
 </body>
 
-<script src="./js/js.js"></script>
+<script src="./js/script.js"></script>
 </html>
