--- a/rwb/classHyo/test1/index.html
+++ b/rwb/classHyo/test1/index.html
@@ -37,8 +37,38 @@
     </div>
     <div class="wrap">
         <div class="sidebanner">
-            <div>
-                <img src="https://i.ibb.co/RS1gKh2/image.jpg" alt="『죽음의 춤』, 미상">
+            <div class="poster" id="poster">
+                <img id="posterimg" src="https://i.ibb.co/RS1gKh2/image.jpg" alt="『죽음의 춤』, 미상">
+            </div>
+            <div class="posterCover" id="posterCover">
+                <div>
+                    <span>2022 <br> 테마기획전시회 <br>온오프라인 &nbsp;진행</span>
+                </div>
+                <div>
+                    <span>서양미술화가</span>
+                </div>
+                <div>
+                    <span>2022-07-08 <br> ~ <br> 2022-09-08</span>
+                </div>
+                <div>
+                    <span>운영시간</span>
+                    <div>
+                        <span>09:00~18:00까지<br>(입장마감 17:00)<br>*매주 일, 월 및 공휴일 휴관</span>
+                    </div>
+                </div>
+                <div>
+                    <span>전시장소 및 문의</span>
+                    <div>
+                        <span>부산혜미술관:<br>&nbsp;부산광역시&nbsp;해운대구&nbsp;우2동&nbsp;해운대로&nbsp;407&nbsp;신세계프라자&nbsp;7층
+                            <br>T. 051-1234-5678
+                        </span>
+                    </div>
+                </div>
+                <!-- <div>
+                    <span>2022 <br> 테마기획전시회 <br>온오프라인 &nbsp;진행</span>
+                </div> -->
+                <p id="posterText" class="posterText1">끝<br>자<br>락</p>
+                <p class="posterText2">그리고</p>
             </div>
         </div>
         <div class="contentWrap">
@@ -81,7 +111,7 @@
                                 <br>
                                 <p>운영시간</p>
                                 <hr>
-                                <p>09:00 ~ 15:00</p>
+                                <p>09:00 ~ 18:00</p>
                                 <br>
                                 <p>주최/후원</p>
                                 <hr>
