--- a/rwb/classHyo/test1/index.html
+++ b/rwb/classHyo/test1/index.html
@@ -317,47 +317,27 @@
 
                     <div class="contArt_left">
                         <figure class="contArt_imgWrap">
-                            <a href="#">
-                                <img src="https://i.ibb.co/ZxzPNQ6/test1-2.jpg" alt="『윌렘 반 데어 메이르 박사의 해부학 수업』, 미치엘 얀스 판 미에레벨트">
-                            </a>                
+                                <img src="https://i.ibb.co/ZxzPNQ6/test1-2.jpg" alt="『윌렘 반 데어 메이르 박사의 해부학 수업』, 미치엘 얀스 판 미에레벨트"/>            
                         </figure>
                         <figure class="contArt_imgWrap">
-                            <a href="">
-                                <img src="https://i.ibb.co/r0t5yQ3/test1-4.jpg" alt="『의사』, 루크 필데스">
-                            </a>
-
+                                <img src="https://i.ibb.co/r0t5yQ3/test1-4.jpg" alt="『의사』, 루크 필데스"/>
                         </figure>
                         <figure class="contArt_imgWrap">
-                            <a href="">
-                                <img src="https://i.ibb.co/RYVkGnH/test1-5.jpg" alt="『죽음의 승리』, 피테르 브뢰헬">
-                            </a>
-
+                                <img src="https://i.ibb.co/RYVkGnH/test1-5.jpg" alt="『죽음의 승리』, 피테르 브뢰헬"/>
                         </figure>
                     </div>
                     <div class="contArt_right">
                         <figure class="contArt_imgWrap">
-                            <a href="">'
-                                <img src="https://i.ibb.co/w0GcBTB/test1-6.jpg" alt="『밤』, 페르디난드 호들러">
-                            </a>
-
+                                <img src="https://i.ibb.co/w0GcBTB/test1-6.jpg" alt="『밤』, 페르디난드 호들러"/>
                         </figure>
                         <figure class="contArt_imgWrap">
-                            <a href="">
-                                <img src="https://i.ibb.co/wBg2w8k/test1-7.png" alt="『오필리아』, 존 에버렛 밀레이">
-                            </a>
-                            
+                                <img src="https://i.ibb.co/wBg2w8k/test1-7.png" alt="『오필리아』, 존 에버렛 밀레이"/>                            
                         </figure>
                         <figure class="contArt_imgWrap">
-                            <a href="">
-                                <img src="https://i.ibb.co/GJb1XHS/test1-8.jpg" alt="『바니타스 정물화』, 피터르 클레즈">
-                            </a>
-
+                                <img src="https://i.ibb.co/GJb1XHS/test1-8.jpg" alt="『바니타스 정물화』, 피터르 클레즈"/>
                         </figure>
                         <figure class="contArt_imgWrap">
-                            <a href="">
-                                <img src="https://i.ibb.co/7CJy5MH/test1-9.jpg" alt="『소크라테스의 죽음』, 자크루이 다비드">
-                            </a>
-                            
+                                <img src="https://i.ibb.co/7CJy5MH/test1-9.jpg" alt="『소크라테스의 죽음』, 자크루이 다비드"/>
                         </figure>
                     </div>
                 </div>
